configure webpack, eslint ignore

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
     "api": "node ratingsAPI.js",
+    "build": "webpack",
+    "watch": "webpack --watch",
     "format": "prettier --write --single-quote --tab-width=2 --parser=flow   \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet"
   },
