add search test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,13 @@
       "jsx": true
     }
   },
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+  },
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   }
 }
