--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "watch": "webpack --watch",
     "format": "prettier --write --single-quote --tab-width=2 --parser=flow   \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "test": "jest",
+    "test:update": "jest -u"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "jest-serializer-enzyme"
+    ]
   },
   "dependencies": {
     "axios": "0.16.1",
