--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint **/*.{js,jsx} --quiet",
     "dev": "webpack-dev-server",
     "test": "jest",
-    "test:update": "jest -u"
+    "test:update": "jest -u",
+    "test:coverage": "jest --coverage"
   },
   "jest": {
     "snapshotSerializers": [
