--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "api": "node ratingsAPI.js",
     "build": "webpack",
     "watch": "webpack --watch",
-    "format": "prettier --write --single-quote --tab-width=2 --parser=flow   \"js/**/*.{js,jsx}\"",
+    "format": "prettier --write --single-quote --tab-length=120 --parser=flow   \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "dev": "webpack-dev-server",
     "test": "jest",
@@ -23,6 +23,7 @@
     "compression": "1.6.2",
     "cors": "2.8.3",
     "express": "4.15.3",
+    "global": "^4.4.0",
     "lodash": "4.17.4",
     "preact": "8.1.0",
     "preact-compat": "3.16.0",
